--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
     </div>
 </header> 
 <!-- Fin del Header-->
+
 <!-- Inicio del body-->
 <body>
 
@@ -49,7 +50,7 @@
 <!-- Inicio de la seccion habilidades-->
         <div class="container w-75 mb-5" id="habilidades"> 
             <div class="h3">HABILIDADES</div>
-            <div class="h4 fw-light mb-3"><strong>Tecnologías que manejo:</strong></div>
+            <div class="h4 fw-light mb-2">Tecnologías que manejo:</div>
             <div class="row">
                 <div class="col-lg-6">
                     <div class="m-1 p-3 rounded-3 bg-gradient bg-light border border-dark border-2 text-dark">
@@ -103,7 +104,7 @@
 <!-- Inicio de la seccion Futuro-->
         <div class="container w-75" id="futuro"> 
             <div class="h3">FUTURO</div>
-            <div class="h4 fw-light">Lenguajes que me encuentro aprendiendo</div>
+            <div class="h4 fw-light mb-2">Lenguajes que me encuentro aprendiendo</div>
             <div class="row">
                 <div class="col-lg-6">
                     <div class="m-1 p-3  rounded-3 bg-gradient bg-light border border-dark border-2 text-dark">
@@ -137,10 +138,60 @@
                 </div>
             </div>
         </div>
-
 <!-- Fin de la seccion Futuro-->
+
+<!-- Inicio de la sección Proyectos realizados-->
+    <div class="container w-75 mt-5 mb-5">
+        <div class="h3">PROYECTOS REALIZADOS</div>
+        <div class="h4 fw-light mb-3">Proyectos realizado en base a guías y modificaciones propias</div>
+    <div class="m-0 row justify-content-center">
+        <div class="col-auto w-75 ">
+            <div id="carouselProyectos" class="carousel shadow slide" data-bs-ride="carousel">
+                <div class="carousel-indicators">
+                  <button type="button" data-bs-target="#carouselProyectos" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                  <button type="button" data-bs-target="#carouselProyectos" data-bs-slide-to="1" aria-label="Slide 2"></button>
+                  <button type="button" data-bs-target="#carouselProyectos" data-bs-slide-to="2" aria-label="Slide 3"></button>
+                </div>
+                <div class="carousel-inner">
+                  <div class="carousel-item active">
+                    <img src="/assets/img/muestra.png" class="d-block w-100" alt="...">
+                    <div class="carousel-caption d-none d-md-block">
+                      <h5>First slide label</h5>
+                      <p>Some representative placeholder content for the first slide.</p>
+                    </div>
+                  </div>
+                  <div class="carousel-item">
+                    <img src="/assets/img/muestra.png" class="d-block w-100" alt="...">
+                    <div class="carousel-caption d-none d-md-block">
+                      <h5>Second slide label</h5>
+                      <p>Some representative placeholder content for the second slide.</p>
+                    </div>
+                  </div>
+                  <div class="carousel-item">
+                    <img src="/assets/img/muestra.png" class="d-block w-100" alt="...">
+                    <div class="carousel-caption d-none d-md-block">
+                      <h5>Third slide label</h5>
+                      <p>Some representative placeholder content for the third slide.</p>
+                    </div>
+                  </div>
+                </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselProyectos" data-bs-slide="prev">
+                  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                  <span class="visually-hidden">Anterior</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselProyectos" data-bs-slide="next">
+                  <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                  <span class="visually-hidden">Siguiente</span>
+                </button>
+              </div>
+        </div>
+</div>
     </div>
+<!-- Fin de la sección Proyectos realizados-->
+
+</div>
 <!-- Fin del container principal-->
+
 </body>
 <!-- Fin del body-->
 
