cambio background, corrección responsive, corrección colores

--- a/index.html
+++ b/index.html
@@ -32,10 +32,13 @@
 
 <!-- Inicio del Header-->
 <header>
-    <div class="p-4 mb-5 container-lg text-center ">
+    <div class="p-4 mb-5 container-lg text-center rounded-3 shadow-lg">
         <div class="h1">Gonzalo Rial</div>
-            <div class="h3">25 años</div> 
-            <div class="h3">📍 Buenos Aires, Argentina</div>
+        <div class="h3">25 años</div> 
+        <div class="h3">📍 Buenos Aires, Argentina</div>
+        <div class="d-flex justify-content-center"> 
+            <div class="h2 m-1"><a class="text-dark" href="https://www.instagram.com/gonzarial/" target="_blank" rel="noopener noreferrer"><i class='bx bxl-instagram'></i></a></div>
+            <div class="h2 m-1"><a class="text-dark" href="https://www.linkedin.com/in/rial-gonzalo/" target="_blank" rel="noopener noreferrer"><i class='bx bxl-linkedin-square' ></i></a></div>
         </div>
     </div>
 </header> 
@@ -46,53 +49,57 @@
 
     
 <!-- Inicio del container principal-->
-    <div class="container bg-white">
+    <div class="container shadow-lg">
 <!-- Inicio de la seccion habilidades-->
-        <div class="container w-75 mb-5" id="habilidades"> 
-            <div class="h3">HABILIDADES</div>
-            <div class="h4 fw-light mb-2">Tecnologías que manejo:</div>
-            <div class="row">
-                <div class="col-lg-6">
-                    <div class="m-1 p-3 rounded-3 bg-gradient bg-light border border-dark border-2 text-dark">
+        <div class="container w-100 mb-5" id="habilidades"> 
+            <div class="row justify-content-center">
+                <div class="col-lg-10 col-sm-8">
+                    <div class="m-1 text-dark">
+                        <div class="h3 ">HABILIDADES</div>
+                        <div class="h4 fw-light mb-2">Tecnologías que manejo:</div>
+                    </div>
+                </div>
+                <div class="col-lg-5 col-sm-8 b">
+                    <div class="m-1 p-3 rounded-3  bg-gradient bg-secondary border border-dark border-2 text-light">
                         <div class="lengu"> 
                             <div class="ms-2"><img src="/assets/icons/html5.png" alt="" width="50vw"> HTML5</div>
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-6">
-                    <div class="m-1 p-3  rounded-3 bg-gradient bg-light border border-dark border-2 text-dark">
+                <div class="col-lg-5 col-sm-8">
+                    <div class="m-1 p-3  rounded-3 bg-gradient bg-secondary border border-dark border-2 text-light">
                         <div class="lengu"> 
                             <div class="ms-2"><img src="/assets/icons/css-3.png" alt="" width="50vw"> CSS</div>
                         </div>
                     </div>
                 </div>
             </div>
-            <div class="row">
-                <div class="col-lg-6">
-                    <div class="m-1 p-3  rounded-3 bg-gradient bg-light border border-dark border-2 text-dark">
+            <div class="row justify-content-center">
+                <div class="col-lg-5 col-sm-8">
+                    <div class="m-1 p-3  rounded-3 bg-gradient bg-secondary border border-dark border-2 text-light">
                         <div class="lengu">
                             <div class="align-items-start "><img class="" src="/assets/icons/bootstrap-5-1.svg" alt=""  width="59vw"> BOOTSTRAP</div>
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-6">
-                    <div class="m-1 p-3  rounded-3 bg-gradient bg-light border border-dark border-2 text-dark">
+                <div class="col-lg-5 col-sm-8">
+                    <div class="m-1 p-3  rounded-3 bg-gradient bg-secondary border border-dark border-2 text-light">
                         <div class="lengu">
                             <div class="ms-2"><img src="/assets/icons/javascript.png" alt="" width="50vw"> JAVASCRIPT</div>
                         </div>
                     </div>
                 </div>
             </div>
-            <div class="row">
-                <div class="col-lg-6">
-                    <div class="m-1 p-3  rounded-3 bg-gradient bg-light border border-dark border-2 text-dark">
+            <div class="row justify-content-center">
+                <div class="col-lg-5 col-sm-8">
+                    <div class="m-1 p-3  rounded-3 bg-gradient bg-secondary border border-dark border-2 text-light">
                         <div class="lengu">
                             <div class="ms-2"><img class="" src="/assets/icons/SQL.png" alt=""  width="50vw"> SQL</div>
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-6">
-                    <div class="m-1 p-3  rounded-3 bg-gradient bg-light border border-dark border-2 text-dark">
+                <div class="col-lg-5 col-sm-8">
+                    <div class="m-1 p-3  rounded-3 bg-gradient bg-secondary border border-dark border-2 text-light">
                         <div class="lengu">
                             <div class="ms-2"><img src="/assets/icons/25231.png" alt="" width="50vw"> GIT</div>
                         </div>
@@ -102,35 +109,38 @@
         </div>
 <!-- Fin de la seccion habilidades-->
 <!-- Inicio de la seccion Futuro-->
-        <div class="container w-75" id="futuro"> 
-            <div class="h3">FUTURO</div>
-            <div class="h4 fw-light mb-2">Lenguajes que me encuentro aprendiendo</div>
-            <div class="row">
-                <div class="col-lg-6">
-                    <div class="m-1 p-3  rounded-3 bg-gradient bg-light border border-dark border-2 text-dark">
+        <div class="container w-100" id="futuro"> 
+            <div class="row justify-content-center">
+                <div class="col-lg-10 col-sm-8">
+                    <div class="m-1 text-dark">
+                        <div class="h3">FUTURO</div>
+                        <div class="h4 fw-light mb-2">Lenguajes que me encuentro aprendiendo</div>                    </div>
+                </div>
+                <div class="col-lg-5 col-sm-8">
+                    <div class="m-1 p-3  rounded-3 bg-gradient bg-secondary border border-dark border-2 text-light">
                         <div class="lengu"> 
                             <div class="align-middle"><img src="/assets/icons/nodejs.png" alt="" width="50vw">  NODE.JS</div>
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-6">
-                    <div class="m-1 p-3  rounded-3 bg-gradient bg-light border border-dark border-2 text-dark">
+                <div class="col-lg-5 col-sm-8">
+                    <div class="m-1 p-3  rounded-3 bg-gradient bg-secondary border border-dark border-2 text-light">
                         <div class="lengu"> 
                             <div class="align-middle"><img src="/assets/icons/css-3.png" alt="" width="50vw"> SQL</div>
                         </div>
                     </div>
                 </div>
             </div>
-            <div class="row">
-                <div class="col-lg-6">
-                    <div class="m-1 p-3  rounded-3 bg-gradient bg-light border border-dark border-2 text-dark">
+            <div class="row justify-content-center">
+                <div class="col-lg-5 col-sm-8">
+                    <div class="m-1 p-3  rounded-3 bg-gradient bg-secondary border border-dark border-2 text-light">
                         <div class="lengu">
                             <div class="align-middle"><img class="" src="/assets/icons/bootstrap-5-1.svg" alt="" width="60vw"></div>
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-6">
-                    <div class="m-1 p-3  rounded-3 bg-gradient bg-light border border-dark border-2 text-dark">
+                <div class="col-lg-5 col-sm-8">
+                    <div class="m-1 p-3  rounded-3 bg-gradient bg-secondary border border-dark border-2 text-light">
                         <div class="lengu">
                             <div class="align-middle"><img src="/assets/icons/javascript.png" alt="" width="50vw"> JAVASCRIPT</div>
                         </div>
@@ -141,10 +151,13 @@
 <!-- Fin de la seccion Futuro-->
 
 <!-- Inicio de la sección Proyectos realizados-->
-    <div class="container w-75 mt-5 mb-5">
-        <div class="h3">PROYECTOS REALIZADOS</div>
-        <div class="h4 fw-light mb-3">Proyectos realizado en base a guías y modificaciones propias</div>
-    <div class="m-0 row justify-content-center">
+    <div class="container w-100 mt-5 mb-5">
+    <div class="row justify-content-center">
+        <div class="col-lg-10 col-sm-8">
+            <div class="m-1 text-dark">
+                <div class="h3">PROYECTOS REALIZADOS</div>
+                <div class="h4 fw-light mb-3">Proyectos realizado en base a guías y modificaciones propias</div>                    </div>
+        </div>
         <div class="col-auto w-75 ">
             <div id="carouselProyectos" class="carousel shadow slide" data-bs-ride="carousel">
                 <div class="carousel-indicators">
