--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
 
 <!-- Inicio del Header-->
 <header>
-    <div class="p-4 mb-5 container-lg text-center rounded-3 shadow-lg">
-        <div class="h1">Gonzalo Rial</div>
-        <div class="h3">25 años</div> 
+    <div class="p-4 mb-5 container-lg text-center rounded-pill shadow-lg">
+        <div class="h1">Dev Jr.</div>
+        <div class="h3">Gonza Rial</div> 
         <div class="h3">📍 Buenos Aires, Argentina</div>
         <div class="d-flex justify-content-center"> 
             <div class="h2 m-1"><a class="text-dark" href="https://www.instagram.com/gonzarial/" target="_blank" rel="noopener noreferrer"><i class='bx bxl-instagram'></i></a></div>
@@ -49,24 +49,24 @@
 
     
 <!-- Inicio del container principal-->
-    <div class="container shadow-lg">
+    <div class="container rounded-3 shadow-lg">
 <!-- Inicio de la seccion habilidades-->
         <div class="container w-100 mb-5" id="habilidades"> 
             <div class="row justify-content-center">
-                <div class="col-lg-10 col-sm-8">
+                <div class=" col-lg-10 col-sm-8">
                     <div class="m-1 text-dark">
                         <div class="h3 ">HABILIDADES</div>
                         <div class="h4 fw-light mb-2">Tecnologías que manejo:</div>
                     </div>
                 </div>
-                <div class="col-lg-5 col-sm-8 b">
+                <div class="col-10 col-lg-5 col-sm-8 b">
                     <div class="m-1 p-3 rounded-3  bg-gradient bg-secondary border border-dark border-2 text-light">
                         <div class="lengu"> 
                             <div class="ms-2"><img src="/assets/icons/html5.png" alt="" width="50vw"> HTML5</div>
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-5 col-sm-8">
+                <div class="col-10 col-lg-5 col-sm-8">
                     <div class="m-1 p-3  rounded-3 bg-gradient bg-secondary border border-dark border-2 text-light">
                         <div class="lengu"> 
                             <div class="ms-2"><img src="/assets/icons/css-3.png" alt="" width="50vw"> CSS</div>
@@ -92,7 +92,7 @@
             </div>
             <div class="row justify-content-center">
                 <div class="col-lg-5 col-sm-8">
-                    <div class="m-1 p-3  rounded-3 bg-gradient bg-secondary border border-dark border-2 text-light">
+                    <div class="m-1 p-3 rounded-3 bg-gradient bg-secondary border border-dark border-2 text-light">
                         <div class="lengu">
                             <div class="ms-2"><img class="" src="/assets/icons/SQL.png" alt=""  width="50vw"> SQL</div>
                         </div>
@@ -107,9 +107,10 @@
                 </div>
             </div>
         </div>
+    </div>
 <!-- Fin de la seccion habilidades-->
 <!-- Inicio de la seccion Futuro-->
-        <div class="container w-100" id="futuro"> 
+        <div class="container w-100 shadow-lg rounded-3" id="futuro"> 
             <div class="row justify-content-center">
                 <div class="col-lg-10 col-sm-8">
                     <div class="m-1 text-dark">
@@ -150,8 +151,8 @@
         </div>
 <!-- Fin de la seccion Futuro-->
 
-<!-- Inicio de la sección Proyectos realizados-->
-    <div class="container w-100 mt-5 mb-5">
+<!-- Inicio de la sección Proyectos realizados
+    <div class="container w-100 mt-5 mb-5 shadow-lg">
     <div class="row justify-content-center">
         <div class="col-lg-10 col-sm-8">
             <div class="m-1 text-dark">
@@ -200,7 +201,7 @@
         </div>
 </div>
     </div>
-<!-- Fin de la sección Proyectos realizados-->
+ Fin de la sección Proyectos realizados-->
 
 </div>
 <!-- Fin del container principal-->
