--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
 <!-- Inicio del Header-->
 <header>
-    <div class="p-4 mb-5 container-lg text-center rounded-pill shadow-lg">
+    <div class="p-4 mb-5 container-lg text-center rounded-3 shadow-lg">
         <div class="h1">Dev Jr.</div>
         <div class="h3">Gonza Rial</div> 
         <div class="h3">📍 Buenos Aires, Argentina</div>
