--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
         <p>
             Además de estar estudiando para ser Analista de sistemas, 
             soy un apasionado de la tecnología y la programación. 
-            Disfruto mucho haciendo cursos, o proyectos que tengan 
-            de por medio grandes desafios, donde pueda experimentar, probar y sobre todo aprender. 
+            Disfruto mucho llevando a cabo proyectos que impliquen grandes 
+            desafios, donde pueda experimentar, probar y sobre todo aprender. 
             
         </p>
         <h1>Aptitudes</h1>
