--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="favicon.ico">
-    <title>Gonza Rial - Dev Jr</title>
+    <title>Gonzalo Rial - Dev Jr</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans+Condensed:wght@300&family=Roboto&display=swap" rel="stylesheet">
@@ -14,7 +14,7 @@
 <body>
     <header>
         <h3>Dev Jr</h3>
-        <h3> Gonza Rial 👦🏽</h3>
+        <h3> Gonzalo Rial 👦🏽</h3>
     </header>
     <section class="uno">
         <div class="caja-central">
