--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="favicon.ico">
-    <title>Gonzalo Rial - Dev Jr</title>
+    <title>Gonzalo - Dev Jr</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans+Condensed:wght@300&family=Roboto&display=swap" rel="stylesheet">
@@ -25,7 +25,7 @@
                 <div>    
                     <h1>Hola 👋</h1>
                     <p class="presentacion">
-                       Soy Gonza, actualmente me encuentro en el segundo año de Análisis de Sistemas!
+                       Soy Gonzalo, actualmente me encuentro en el segundo año de Análisis de Sistemas!
                     </p>
                 </div>
             </div>
